--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -46,6 +46,7 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Sprint",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
++ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="Horizontal",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Vertical",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Horizontal",Scale=1.000000,Key=D)
