Grappling Hook Update 2

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -15,6 +15,7 @@ PreferredLandscapeOrientation=LandscapeLeft
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/Map-1.Map-1
 GlobalDefaultGameMode=/Game/Blueprints/KickshotGameMode.KickshotGameMode_C
+GameDefaultMap=/Game/Maps/Map-1.Map-1
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
