--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -54,6 +54,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Bottom)
 +ActionMappings=(ActionName="GrapplingHook",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
 +ActionMappings=(ActionName="Dash",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Left)
++ActionMappings=(ActionName="Walking",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
 +AxisMappings=(AxisName="HorizontalMovement",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="HorizontalMovement",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="LookHorizontal",Scale=1.000000,Key=MouseX)
